<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_jobs"
            android:icon="@drawable/ic_jobs"
            android:title="@string/option2" />
        <item
            android:id="@+id/action_my_jobs"
            android:icon="@drawable/ic_my_jobs"
            android:title="@string/option3" />
        <item
            android:id="@+id/action_my_announces"
            android:icon="@drawable/ic_my_jobs"
            android:title="@string/option6" />
        <item
            android:id="@+id/action_announce"
            android:icon="@drawable/ic_announce"
            android:title="@string/option4" />
        <item
            android:id="@+id/action_account"
            android:icon="@drawable/ic_account"
            android:title="@string/option1" />
    </group>
</menu>