<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_50"
        android:gravity="center"
        android:text="@string/title11"
        android:background="?attr/colorPrimaryVariant"
        style="@style/progress" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_filed1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="textCapSentences"
        android:imeOptions="actionNext"
        android:hint="@string/announcement_hint01"
        android:fontFamily="sans-serif" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_filed2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:imeOptions="actionNext"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/announcement_hint05" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_filed3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:imeOptions="actionDone"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/announcement_hint06" />
</LinearLayout>