<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_marginTop="@dimen/dimens_5"
    android:layout_marginStart="@dimen/dimens_10"
    android:layout_marginEnd="@dimen/dimens_10"
    android:layout_marginBottom="@dimen/dimens_10">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/announcement_filed1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/announcement_hint01"
            android:inputType="textCapSentences"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_5"
        app:errorEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/announcement_filed2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/announcement_hint02"
            android:inputType="textCapSentences"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_5"
        app:errorEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/announcement_filed3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/announcement_hint03"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_5"
        app:errorEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/announcement_filed4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/announcement_hint04"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_5"
        app:errorEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/announcement_filed5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/announcement_hint05"
            android:inputType="textCapSentences"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_5"
        app:errorEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/announcement_filed6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/announcement_hint06"
            android:inputType="textCapSentences"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_5"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/announcement_filed7_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:endIconMode="custom"
            app:endIconDrawable="@android:drawable/ic_menu_today"
            app:errorEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/announcement_filed7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:imeOptions="actionNext"
                android:hint="@string/announcement_hint07"
                android:inputType="date"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/announcement_filed8_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:endIconMode="custom"
            app:endIconDrawable="@android:drawable/ic_menu_today"
            app:errorEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/announcement_filed8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_5"
                android:enabled="false"
                android:imeOptions="actionNext"
                android:hint="@string/announcement_hint08"
                android:inputType="date"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_5"
        app:errorEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/announcement_filed9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/announcement_hint09"
            android:inputType="numberDecimal"
            android:text="@string/txt_value_default"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/announcement_filed11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/announcement_hint11"
        app:buttonTint="?attr/colorPrimaryVariant" />
</LinearLayout>