<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dimens_20">
    <!-- Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_filed1_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_filed1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/account_hint1"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_filed2_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_10"
        app:errorEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_filed2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/account_hint2"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_filed3_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_10"
        app:passwordToggleEnabled="true"
        app:errorEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_filed3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/account_hint3"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Repeat -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_filed4_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_10"
        app:passwordToggleEnabled="true"
        app:errorEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_filed4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/account_hint4"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>